Fix overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ html, body {
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     overflow-x: hidden;
+    position: relative;
 }
 
 
